tests/rustdoc-ui/error-in-impl-trait/impl-keyword.stderr
error[E0433]: failed to resolve: use of undeclared crate or module `error`
  --> $DIR/impl-keyword.rs:3:5
   |
LL |     error::_in::impl_trait()
   |     ^^^^^ use of undeclared crate or module `error`

error: Compilation failed, aborting rustdoc

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0433`.
